<resources>
    <string name="app_name">WaterTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notificationChannel">notificationChannel</string>
    <string name="_6_hours">6 hours</string>
    <string name="_3_hours">3 hours</string>
    <string name="_1_hour">1 hour</string>
    <string name="_1_min">1 min</string>
    <string name="edit_biometric_data">Edit Biometric Data</string>
</resources>
