<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="#c4daff">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:layout_marginBottom="15dp"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="serif"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Notifications"
            android:textColor="#000000"
            android:textSize="24sp"
            android:fontFamily="serif"/>

        <Switch
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/notificationSwitch"/>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/group">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:id="@+id/oneMinute"
            android:enabled="false"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:id="@+id/oneHour"
            android:enabled="false"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:id="@+id/threeHours"
            android:enabled="false"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sixHours"
            android:enabled="false"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/_1_min"
            android:fontFamily="serif"
            android:textStyle="italic"
            android:layout_marginRight="18dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/_1_hour"
            android:fontFamily="serif"
            android:textStyle="italic"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/_3_hours"
            android:fontFamily="serif"
            android:textStyle="italic"
            android:layout_marginRight="12dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textStyle="italic"
            android:text = "@string/_6_hours" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_biometric_data"
        android:textColor="#000000"
        android:textSize="24sp"
        android:fontFamily="serif"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/ageSettings"
            android:maxLines="1"
            android:maxLength="3"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" years old"
            android:textColor = "#000000"
            android:fontFamily="serif"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/weightSettings"
            android:textColor="#000000"
            android:maxLines="1"
            android:maxLength="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" lbs"
            android:textColor = "#000000"
            android:fontFamily="serif"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/exerciseSettings"
            android:maxLength="4"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" hour(s) of exercise per day"
            android:textColor = "#000000"
            android:fontFamily="serif"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="save"
        android:id="@+id/save"
        android:layout_marginBottom="10dp"/>


</LinearLayout>

</ScrollView>